# demo-elt-fivetran-dbt-snowflake

./: README.md  pyproject.toml
elt_jira_snowflake/: dbt_project.yml
elt_jira_snowflake/models/fivetran/: fivetran-jira.py
elt_jira_snowflake/models/jira/: src__jira_field.yml  src__jira_field_option.yml  src__jira_issue.yml
