[project]
name = "elt-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "FangQijun",email = "7221043+FangQijun@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-snowflake (>=1.9.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
